Round 4 task 1: journal, README and manifest for complex
Milestone: complex green on linux-amd64 (run 35355533926, first try) and on darwin-aarch64
(run 35356407402, after the sysroot fix), with what the sixteen checks cover and the
configuration they need. Findings: the dev-run.sh contract extension and its two bash
constraints, the bundled clang's missing macOS sysroot, the build-time initialization a
CEntryPointLiteral needs and the HotSpot-side mirror of it, and the two defects the local
HotSpot run caught. Decision: function pointer and JNI upcalls instead of an exported
@CEntryPoint symbol, because the LLVM backend emits no /EXPORT: directive on Windows.

README: the program-directory contract dev-run.sh implements, and JNI's new status in the
platform section.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>